syntax = "proto3";

package order;

option go_package = "github.com/agnaldojpereira/list-order/proto";

service OrderService {
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {}
}

message Order {
  int64 id = 1;
  int64 user_id = 2;
  double amount = 3;
  string status = 4;
}

message ListOrdersRequest {}

message ListOrdersResponse {
  repeated Order orders = 1;
}